styles/home.css
body {
    overflow-x: hidden;
}

.showcase {
    background: #F3F5F9;
    padding-top: 14rem;
    padding-bottom: 5rem;
}

.showcase .grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 3rem;
    place-items: center;
}

.showcase-text h1 {
    color: #0000FF;
    font-size: 56px;
    font-weight: 800;
    text-transform: uppercase;
    line-height: 64px;
}

.showcase-text p {
    padding: 1rem 0;
    color: #3B3B53;
    font-size: 20px;
    font-weight: 600;
}

.cta {
    display: flex;
    align-items: center;
    padding-top: 2rem;
    gap: 10px;
}

.cta .btn {
    background: #0000FF;
    box-shadow: 0px 10px 40px 0px #7E7EFFCC;
    border: 0;
    padding: 18px 38px;
    border-radius: 8px;
}

.cta .btn-1 {
    background: transparent;
    border: 0;
    padding: 18px 38px;
}

.btn a {
    color: #fff;
    text-decoration: none;
    font-family: inherit;
    font-size: 16px;
    font-weight: 600;
}

.btn-1 a {
    color: #767586;
    text-decoration: none;
    font-family: inherit;
    font-size: 16px;
    font-weight: 600;
}

.showcase-img {
    width: 100%;
}

.showcase-img img {
    width: 100%;
}

.info {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    place-items: center;
    padding-top: 3rem;
    width: 70%;
}

.details {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

.info h1 {
    color: #3B3B53;
    font-size: 24px;
    font-weight: 600;
    text-align: center;
    font-family: Poppins;
}

.info p {
    color: #3B3B53;
    font-size: 13px;
    font-weight: 400;
    padding: 0;
    margin-top: -20px;
    text-align: center;
}

.creators, .fans, .revenues {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.networks {
    width: 75%;
    margin: 0 auto;
    margin-top: 2rem;
}

.networks img {
    width: 100%;
}

[data-tab-content] {
    display: none;
    width: 90%;
    margin: 0 auto;
}

.active[data-tab-content] {
    display: block;
    width: 90%;
    margin: 0 auto;
}


.tabs {
    display: flex;
    justify-content: center;
    align-items: center;
    list-style-type: none;
    padding: .7rem .5rem;
    background: #EBEBED;
    width: 18%;
    border-radius: 16px;
    gap: 10px;
    margin: 0 auto;
}

.tab-btn {
    background: #0000FF;
    padding: 1.5rem;
}

.tab {
    cursor: pointer;
    padding: 5px;
    font-family: Poppins;
    font-size: 20px;
    font-weight: 600;
    line-height: 24px;
    letter-spacing: 0em;
    text-align: left;
    color: #C0BFC7;
    width: 100%;
}

.tab.active {
    background: #FFFFFF;
    box-shadow: 2px 2px 10px 0px #0000001A;
    padding: 16px 24px;
    color: #3B3B53;
    border-radius: 8px;
    width: 100%;
}

.content {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.content-img {
    width: 100%;
}

.content-img img {
    width: 100%;
}

.content-text {
    background-image: url("/img/Patterns.png");
    background-size: cover;
    background-repeat: no-repeat;
    padding: 4rem;
}

.content-text h1 {
    text-align: center;
    font-weight: 800;
    font-size: 24px;
    color: #0000FF;
    margin: 2rem 0;
}

.mb-img {
    display: none;
}

.cards {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
}

.card {
    background: #FFFFFF;
    box-shadow: -15px 15px 50px 0px #0000FF33;
    padding: 24px 48px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    border-radius: 16px;
}

.card img {
    margin: 1rem 0;
}

.card h2 {
    text-transform: uppercase;
    line-height: 25px;
    color: #0000FF;
    font-family: myFont;
}

.card span {
    opacity: .5;
}

.card p {
    color: #3B3B53;
    font-size: 16px;
    font-weight: 600;
    line-height: 24px;
    letter-spacing: 0em;
}

.galaxy {
    padding: 4rem 0;
}

.galaxy .grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    place-items: center;
    gap: 20px;
}

.galaxy-text img {
    width: 50%;
}

.galaxy-text p {
    margin-top: 1.5rem;
    color: #767586;
    font-weight: 400;
    font-size: 20px;
}

.galaxy-img {
    width: 100%;
}

.galaxy-img img {
    width: 100%;
}

.roadmap {
    background-color: #F3F5F9;
    padding: 4rem 0;
}

.roadmap h1 {
    text-align: center;
    margin-bottom: 2rem;
    color: #0000FF;
    font-weight: 800;
    font-size: 37px;
}

.phase-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 15px;
}

.phase {
    background: #FFFFFF;
    max-width: 500px;
    padding: 2rem;
    height: fit-content;
}

.phase h2 {
    color: #0000FF;
    text-align: center;
    font-family: myFont;
}

.phase li {
    color: #767586;
    font-size: 16px;
    font-weight: 400;
    line-height: 32px;
}

.newsletter {
    text-align: center;
    padding: 4rem 0;
}

.newsletter h1 {
    color: #0000FF;
    font-weight: 800;
    font-size: 30px;
}

.newsletter p {
    color: #767586;
    font-size: 16px;
    font-weight: 400;
    margin: 1rem 0;
}

.newsletter form {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 16px 10px;
    gap: 10px;
}

.newsletter form input {
    background: #F3F5F9;
    border-radius: 8px;
    padding: 20px 120px;
    width: 400px;
    border: 0;
    outline: 0;
}

.newsletter form button {
    background: #0000FF;
    box-shadow: 0px 10px 40px rgba(126, 126, 255, 0.8);
    border-radius: 8px;
    border: 0;
    padding: 20px 48px;
    color: #fff;
    font-family: inherit;
    margin-left: -3rem;
}

.as-seen-on {
    background: #0000FF;
    padding: 4rem 0;
    text-align: center;
}

.as-seen-on h1 {
    color: #fff;
    margin-bottom: 1rem;
    font-family: Poppins;
}

.as-seen-on img {
    width: 100%;
}

.img-2 {
    display: none;
}

@media (max-width: 1200px) {
    .tabs {
        width: 30%;
    }

    .showcase-text h1 {
        font-size: 40px;
        line-height: 50px;
    }

    .info {
        width: 100%;
    }

    .info h1 {
        font-size: 20px;
    }

    .info p {
        font-size: 13px;
    }

    .info p {
        margin-top: -10px;
    }
}

@media (max-width: 1050px) {
    .showcase-text h1 {
        font-size: 30px;
        line-height: 45px;
    }

    .info h1 {
        font-size: 20px;
    }

    .info p {
        font-size: 13px;
    }
}

@media (max-width: 1000px) {
    .showcase {
        padding-top: 9rem;
    }

   .showcase .grid {
    grid-template-columns: 1fr;
   }

   .showcase-text {
    order: 1;
    text-align: center;
   }

   .cta {
    justify-content: center;
   }

   .showcase-text h1 {
    font-size: 50px;
    line-height: 50px;
    }

    .info h1 {
        font-size: 20px;
    }

    .info p {
        font-size: 13px;
    }

    .content {
        grid-template-columns: 1fr;
    }

    .phase-grid {
        grid-template-columns: 1fr;
    }

    .phase {
        max-width: 100%;
    }

    .tabs {
        width: 40%;
    }
}

@media (max-width: 700px) {
    .galaxy .grid {
        grid-template-columns: 1fr;
    }

    .galaxy-text {
        text-align: center;
        order: 1;
    }

    .tabs {
        width: 60%;
    }
}

@media (max-width: 600px) {
    .content-text {
        padding: 1rem;
    }

    .tab-content {
        width: 90%;
        margin: 0 auto;
    }

    /* .content-img {
        width: 90%;
        margin: 0 auto;
    } */

    .img-2 {
        display: block;
    }

    .img-1 {
        display: none;
    }

    .newsletter form {
        flex-direction: column;
        gap: 20px;
    }

    .newsletter form button {
        margin-left: 0;
    }

    .cards {
        gap: 10px;
    }

    .card h2 {
        font-size: 16px;
    }

    .card p {
        font-size: 12px;
    }

    .networks {
        display: none;
    }

    .info {
        grid-template-columns: 1fr;
    }

    .newsletter form input {
        width: 200px;
        padding: 20px 60px;
    }

    .showcase-text h1 {
        font-size: 25px;
        line-height: 30px;

    }

    .info h1 {
        font-size: 20px;
    }

    .info p {
        font-size: 13px;
    }

    .showcase {
        padding-top: 6rem;
    }

    .showcase-text p {
        font-size: 15px;
    }

    .tab {
        font-size: 14px;
    }

    .btn-1 {
        display: none;
    }

    .mb-img {
        display: block;
        width: 100%;
    }

    .dk-img {
        display: none;
    }
}

@media (max-width: 400px) {
    .cards {
        grid-template-columns: 1fr;
    }

    .tabs {
        width: 80%;
    }
}

@media (max-width: 300px) {
    .tabs {
        width: 100%;
    }
}

